[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Daniil <danokp@mail.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
django-bootstrap4 = "^23.1"
bootstrap4 = "^0.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
django-extensions = "^3.2.1"
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
